--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Gallery from "../components/Gallery.astro";
+import MainGallery from "../components/MainGallery.astro";
 import Slideshow from "../components/Slideshow.astro";
 import HeroText from "../components/HeroText.astro";
 ---
@@ -11,5 +11,5 @@ import HeroText from "../components/HeroText.astro";
       <HeroText />
     </div>
   </Slideshow>
-  <Gallery />
+  <MainGallery />
 </Layout>
