--- a/src/pages/turinSeries.astro
+++ b/src/pages/turinSeries.astro
@@ -1,5 +1,8 @@
 ---
+import GalleryTorinoSeries from "../components/GalleryTorinoSeries.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Turin Series">Turin Series</Layout>
+<Layout title="Turin Series">
+  <GalleryTorinoSeries />
+</Layout>
