added Turin gallery

--- a/src/components/GalleryTurinSeries.astro
+++ b/src/components/GalleryTurinSeries.astro
@@ -8,19 +8,19 @@ import Container from "./Container.astro";
   <div class="row">
     <div class="column">
       <Picture
-        src="/src/images/veniceSeries/VE-flexn1.png"
+        src="/src/images/torinoSeries/ReflexTOn.1.png"
         alt="artwork called ReflexTOn"
         width={945}
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/veniceSeries/VE-flexn5.png"
+        src="/src/images/torinoSeries/ReflexTOn.3.png"
         alt="artwork called ReflexTOn"
         width={945}
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/veniceSeries/VE-flexn9.png"
+        src="/src/images/torinoSeries/ReflexTOn.5.png"
         alt="artwork called ReflexTOn"
         width={886}
         {...sharedPictureProps}
@@ -28,19 +28,19 @@ import Container from "./Container.astro";
     </div>
     <div class="column">
       <Picture
-        src="/src/images/veniceSeries/VE-flexn2.png"
+        src="/src/images/torinoSeries/ReflexTOn.2.png"
         alt="artwork called ReflexTOn"
         width={945}
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/veniceSeries/VE-flexn6.png"
+        src="/src/images/torinoSeries/ReflexTOn.4.png"
         alt="artwork called ReflexTOn"
         width={945}
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/veniceSeries/VE-flexn10.png"
+        src="/src/images/torinoSeries/ReflexTOn.6.png"
         alt="artwork called ReflexTOn"
         width={1181}
         {...sharedPictureProps}
@@ -48,19 +48,13 @@ import Container from "./Container.astro";
     </div>
     <div class="column">
       <Picture
-        src="/src/images/veniceSeries/VE-flexn3.png"
+        src="/src/images/torinoSeries/ReflexTOn.7.png"
         alt="artwork called ReflexTOn"
         width={945}
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/veniceSeries/VE-flexn7.png"
-        alt="artwork called ReflexTOn"
-        width={886}
-        {...sharedPictureProps}
-      />
-      <Picture
-        src="/src/images/veniceSeries/VE-flexn11.png"
+        src="/src/images/torinoSeries/ReflexTOn.8.png"
         alt="artwork called ReflexTOn"
         width={886}
         {...sharedPictureProps}
@@ -68,13 +62,13 @@ import Container from "./Container.astro";
     </div>
     <div class="column">
       <Picture
-        src="/src/images/veniceSeries/VE-flexn4.png"
+        src="/src/images/torinoSeries/ReflexTOn.9.png"
         alt="artwork called ReflexTOn"
         width={1181}
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/veniceSeries/VE-flexn8.png"
+        src="/src/images/torinoSeries/ReflexTOn.10.png"
         alt="artwork called ReflexTOn"
         width={912}
         {...sharedPictureProps}
