--- a/src/components/GalleryVeniceSeries.astro
+++ b/src/components/GalleryVeniceSeries.astro
@@ -8,69 +8,64 @@ import Container from "./Container.astro";
   <div class="row">
     <div class="column">
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.1.png"
-        alt="artwork called ReflexTOn"
-        width={945}
+        src="/src/images/veniceSeries/VE-flexn1.png"
+        alt="artwork called VE-flexn"
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.3.png"
-        alt="artwork called ReflexTOn"
-        width={945}
+        src="/src/images/veniceSeries/VE-flexn5.png"
+        alt="artwork called VE-flexn"
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.5.png"
-        alt="artwork called ReflexTOn"
-        width={886}
+        src="/src/images/veniceSeries/VE-flexn9.png"
+        alt="artwork called VE-flexn"
         {...sharedPictureProps}
       />
     </div>
     <div class="column">
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.2.png"
-        alt="artwork called ReflexTOn"
-        width={945}
+        src="/src/images/veniceSeries/VE-flexn2.png"
+        alt="artwork called VE-flexn"
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.4.png"
-        alt="artwork called ReflexTOn"
-        width={945}
+        src="/src/images/veniceSeries/VE-flexn6.png"
+        alt="artwork called VE-flexn"
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.6.png"
-        alt="artwork called ReflexTOn"
-        width={1181}
+        src="/src/images/veniceSeries/VE-flexn10.png"
+        alt="artwork called VE-flexn"
         {...sharedPictureProps}
       />
     </div>
     <div class="column">
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.7.png"
-        alt="artwork called ReflexTOn"
-        width={945}
+        src="/src/images/veniceSeries/VE-flexn3.png"
+        alt="artwork called VE-flexn"
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.8.png"
-        alt="artwork called ReflexTOn"
-        width={886}
+        src="/src/images/veniceSeries/VE-flexn7.png"
+        alt="artwork called VE-flexn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/veniceSeries/VE-flexn11.png"
+        alt="artwork called VE-flexn"
         {...sharedPictureProps}
       />
     </div>
     <div class="column">
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.9.png"
-        alt="artwork called ReflexTOn"
-        width={1181}
+        src="/src/images/veniceSeries/VE-flexn4.png"
+        alt="artwork called VE-flexn"
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.10.png"
-        alt="artwork called ReflexTOn"
-        width={912}
+        src="/src/images/veniceSeries/VE-flexn8.png"
+        alt="artwork called VE-flexn"
         {...sharedPictureProps}
       />
     </div>
