--- a/src/components/MainGallery.astro
+++ b/src/components/MainGallery.astro
@@ -4,28 +4,45 @@ import { Picture } from "astro-imagetools/components";
 
 <div class="row">
   <div class="column">
-    <Picture src="/src/images/firstgallery/1PlanetEarth.png" alt="artwork called Planet Earth" flatten={true}
-      preload="webp" fallbackFormat="jpg" includeSourceFormat={false} />
+    <Picture
+      src="/src/images/firstgallery/1PlanetEarth.png"
+      alt="artwork called Planet Earth"
+    />
   </div>
   <div class="column">
-    <Picture src="/src/images/firstgallery/2Tothemusiccity.png" alt="artwork called To the music city" width={1024}
-      flatten={true} preload="webp" fallbackFormat="jpg" includeSourceFormat={false} />
+    <Picture
+      src="/src/images/firstgallery/2Tothemusiccity.png"
+      alt="artwork called To the music city"
+      width={1024}
+    />
   </div>
   <div class="column">
-    <Picture src="/src/images/firstgallery/3Through.png" alt="artwork called Through" width={1024} flatten={true}
-      preload="webp" fallbackFormat="jpg" includeSourceFormat={false} />
+    <Picture
+      src="/src/images/firstgallery/3Through.png"
+      alt="artwork called Through"
+      width={1024}
+    />
   </div>
   <div class="column">
-    <Picture src="/src/images/firstgallery/4Earth.png" alt="artwork called Earth" width={1024} flatten={true}
-      preload="webp" fallbackFormat="jpg" includeSourceFormat={false} />
+    <Picture
+      src="/src/images/firstgallery/4Earth.png"
+      alt="artwork called Earth"
+      width={1024}
+    />
   </div>
   <div class="column">
-    <Picture src="/src/images/firstgallery/5Accademia.png" alt="artwork called Accademia" width={1024} flatten={true}
-      preload="webp" fallbackFormat="jpg" includeSourceFormat={false} />
+    <Picture
+      src="/src/images/firstgallery/5Accademia.png"
+      alt="artwork called Accademia"
+      width={1024}
+    />
   </div>
   <div class="column">
-    <Picture src="/src/images/firstgallery/6Why_.png" alt="artwork called Why" width={1024} flatten={true}
-      preload="webp" fallbackFormat="jpg" includeSourceFormat={false} />
+    <Picture
+      src="/src/images/firstgallery/6Why_.png"
+      alt="artwork called Why"
+      width={1024}
+    />
   </div>
 </div>
 <style>
@@ -42,11 +59,11 @@ import { Picture } from "astro-imagetools/components";
     padding: 0 4px;
   }
 
-  .column img {
+  /* .column img {
     margin-top: 8px;
     vertical-align: middle;
     width: 100%;
-  }
+  } */
 
   /* Responsive layout - makes a two column-layout instead of four columns */
   @media screen and (max-width: 800px) {
