--- a/src/pages/turinSeries.astro
+++ b/src/pages/turinSeries.astro
@@ -1,8 +1,8 @@
 ---
-import GalleryTorinoSeries from "../components/GalleryTorinoSeries.astro";
+import GalleryTurinSeries from "../components/GalleryTurinSeries.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Turin Series">
-  <GalleryTorinoSeries />
+  <GalleryTurinSeries />
 </Layout>
