--- a/src/pages/veniceSeries.astro
+++ b/src/pages/veniceSeries.astro
@@ -1,5 +1,8 @@
 ---
+import GalleryVeniceSeries from "../components/GalleryVeniceSeries.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Venice Series">Venice Series</Layout>
+<Layout title="Venice Series">
+  <GalleryVeniceSeries />
+</Layout>
