addded Paintings gallery

--- a/src/components/GalleryPaintingsSeries.astro
+++ b/src/components/GalleryPaintingsSeries.astro
@@ -8,58 +8,68 @@ import Container from "./Container.astro";
   <div class="row">
     <div class="column">
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.1.png"
+        src="/src/images/firstgallery/1PlanetEarth.png"
+        alt="artwork called PlanetEarth"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/firstgallery/5Accademia.png"
         alt="artwork called ReflexTOn"
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.3.png"
-        alt="artwork called ReflexTOn"
-        {...sharedPictureProps}
-      />
-      <Picture
-        src="/src/images/torinoSeries/ReflexTOn.5.png"
-        alt="artwork called ReflexTOn"
-        {...sharedPictureProps}
-      />
-    </div>
-    <div class="column">
-      <Picture
-        src="/src/images/torinoSeries/ReflexTOn.2.png"
-        alt="artwork called ReflexTOn"
-        {...sharedPictureProps}
-      />
-      <Picture
-        src="/src/images/torinoSeries/ReflexTOn.4.png"
-        alt="artwork called ReflexTOn"
-        {...sharedPictureProps}
-      />
-      <Picture
-        src="/src/images/torinoSeries/ReflexTOn.6.png"
+        src="/src/images/firstgallery/9South.png"
         alt="artwork called ReflexTOn"
         {...sharedPictureProps}
       />
     </div>
     <div class="column">
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.7.png"
+        src="/src/images/firstgallery/2Tothemusiccity.png"
         alt="artwork called ReflexTOn"
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.8.png"
+        src="/src/images/firstgallery/6Why_.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/firstgallery/10Canal.png"
         alt="artwork called ReflexTOn"
         {...sharedPictureProps}
       />
     </div>
     <div class="column">
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.9.png"
+        src="/src/images/firstgallery/3Through.png"
         alt="artwork called ReflexTOn"
         {...sharedPictureProps}
       />
       <Picture
-        src="/src/images/torinoSeries/ReflexTOn.10.png"
+        src="/src/images/firstgallery/7Carnival.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/firstgallery/11Contact.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+    </div>
+    <div class="column">
+      <Picture
+        src="/src/images/firstgallery/4Earth.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/firstgallery/8CoffeeBreak.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/firstgallery/12Gold.png"
         alt="artwork called ReflexTOn"
         {...sharedPictureProps}
       />
