added paintings gallery

--- a/src/components/GalleryPaintingsSeries.astro
+++ b/src/components/GalleryPaintingsSeries.astro
@@ -22,6 +22,21 @@ import Container from "./Container.astro";
         alt="artwork called ReflexTOn"
         {...sharedPictureProps}
       />
+      <Picture
+        src="/src/images/secondGallery/1Accademiatoo.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/secondGallery/5Temple.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/secondGallery/9Time.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
     </div>
     <div class="column">
       <Picture
@@ -36,6 +51,26 @@ import Container from "./Container.astro";
       />
       <Picture
         src="/src/images/firstgallery/10Canal.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/secondGallery/2Anyway.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/secondGallery/6Casanova.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/secondGallery/10Jazzman.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/secondGallery/13M.M.png"
         alt="artwork called ReflexTOn"
         {...sharedPictureProps}
       />
@@ -56,6 +91,21 @@ import Container from "./Container.astro";
         alt="artwork called ReflexTOn"
         {...sharedPictureProps}
       />
+      <Picture
+        src="/src/images/secondGallery/3Newconctact.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/secondGallery/7Holiday.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/secondGallery/11Jazzworld.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
     </div>
     <div class="column">
       <Picture
@@ -70,6 +120,21 @@ import Container from "./Container.astro";
       />
       <Picture
         src="/src/images/firstgallery/12Gold.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/secondGallery/4Oceans.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/secondGallery/8Piazzan1.png"
+        alt="artwork called ReflexTOn"
+        {...sharedPictureProps}
+      />
+      <Picture
+        src="/src/images/secondGallery/12Rockstar.png"
         alt="artwork called ReflexTOn"
         {...sharedPictureProps}
       />
