--- a/src/pages/paintings.astro
+++ b/src/pages/paintings.astro
@@ -1,5 +1,8 @@
 ---
+import GalleryPaintingsSeries from "../components/GalleryPaintingsSeries.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Paintings">Paintings</Layout>
+<Layout title="Paintings">
+  <GalleryPaintingsSeries />
+</Layout>
