--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -11,25 +11,56 @@ import BaseIcon from "../components/BaseIcon.astro";
       <h2>Contatti</h2>
       <p>
         Per informazioni sulle mie opere e le prossime esibizioni, contattatemi
-        tramite i seguenti canali
+        tramite i seguenti canali:
       </p>
-      <a href="mailto: luca.pontrandolfo@gmail.com" class="flex items-center"
-        ><span class="mr-2">
+      <div class="flex items-center mt-6">
+        <a href="mailto: luca.pontrandolfo@gmail.com" class="mr-2">
           <Icon name="ic:baseline-email" class="w-6 h-6" fill="currentColor" />
-        </span><span>luca.pontrandolfo@gmail.com</span>
-      </a>
-      <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
+        </a>
+        <a href="mailto: luca.pontrandolfo@gmail.com"
+          >luca.pontrandolfo@gmail.com
+        </a>
+      </div>
+      <div class="flex items-center mt-5 space-x-7">
         <a
           href="https://www.facebook.com/luca.pontrandolfo"
+          target="_blank"
+          rel="noopener noreferrer"
           class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
         >
           <BaseIcon name="ic:baseline-facebook" title="Facebook page" />
         </a>
         <a
           href="https://www.instagram.com/lucapontrandolfo/"
+          target="_blank"
+          rel="noopener noreferrer"
           class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
         >
-          <BaseIcon name="ic:baseline-instagram" title="Instagram page" />
+          <BaseIcon name="mdi:instagram" title="Instagram page" />
+        </a>
+        <a
+          href="https://www.artstation.com/pontrandolfo"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
+        >
+          <BaseIcon name="mdi:artstation" title="Artstation page" />
+        </a>
+        <a
+          href="https://artaporter.it/artista/luca-pontrandolfo/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
+        >
+          <BaseIcon name="artaporter" title="Artaporter page" sizes={5} />
+        </a>
+        <a
+          href="https://www.premioceleste.it/ita_artista_news/idu:176/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="text-gray-500 hover:text-gray-900 dark:hover:text-white no-underline"
+        >
+          <strong class="text-lg font-extrabold align-middle">C,</strong>
         </a>
       </div>
     </div>
