--- a/src/components/Avatar.astro
+++ b/src/components/Avatar.astro
@@ -1,5 +1,5 @@
 <img
   class="w-10 h-10 rounded-full"
-  src="/src/images/LPportrait.png"
+  src="/src/images/fotoPortrait.png"
   alt="Rounded avatar"
 />
