--- a/src/components/SocialsBar.astro
+++ b/src/components/SocialsBar.astro
@@ -2,7 +2,7 @@
 import BaseIcon from "./BaseIcon.astro";
 ---
 
-<div class="flex items-center mt-5 space-x-7">
+<div class="flex items-center space-x-7">
   <a
     href="https://www.facebook.com/luca.pontrandolfo"
     target="_blank"
