--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import { Icon } from "astro-icon";
 import Container from "../components/Container.astro";
-import BaseIcon from "../components/BaseIcon.astro";
+import SocialsBar from "../components/SocialsBar.astro";
 ---
 
 <Layout title="Contacts">
@@ -21,48 +21,7 @@ import BaseIcon from "../components/BaseIcon.astro";
           >luca.pontrandolfo@gmail.com
         </a>
       </div>
-      <div class="flex items-center mt-5 space-x-7">
-        <a
-          href="https://www.facebook.com/luca.pontrandolfo"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
-        >
-          <BaseIcon name="ic:baseline-facebook" title="Facebook page" />
-        </a>
-        <a
-          href="https://www.instagram.com/lucapontrandolfo/"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
-        >
-          <BaseIcon name="mdi:instagram" title="Instagram page" />
-        </a>
-        <a
-          href="https://www.artstation.com/pontrandolfo"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
-        >
-          <BaseIcon name="mdi:artstation" title="Artstation page" />
-        </a>
-        <a
-          href="https://artaporter.it/artista/luca-pontrandolfo/"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
-        >
-          <BaseIcon name="artaporter" title="Artaporter page" sizes={5} />
-        </a>
-        <a
-          href="https://www.premioceleste.it/ita_artista_news/idu:176/"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="text-gray-500 hover:text-gray-900 dark:hover:text-white no-underline"
-        >
-          <strong class="text-lg font-extrabold align-middle">C,</strong>
-        </a>
-      </div>
+      <div class="mt-5"><SocialsBar /></div>
     </div>
   </Container>
 </Layout>
