reworked venice gallery

--- a/src/components/GalleryVeniceSeries.astro
+++ b/src/components/GalleryVeniceSeries.astro
@@ -1,72 +1,60 @@
 ---
-import { Picture } from "astro-imagetools/components";
-import { sharedPictureProps } from "../utils/sharedPictureProps";
 import Container from "./Container.astro";
+import PictureWrapper from "./PictureWrapper.astro";
 ---
 
 <Container>
   <div class="row">
     <div class="column">
-      <Picture
+      <PictureWrapper
         src="/src/images/veniceSeries/VE-flexn1.png"
-        alt="artwork called VE-flexn"
-        {...sharedPictureProps}
+        title="VE-flexn 1"
       />
-      <Picture
+      <PictureWrapper
         src="/src/images/veniceSeries/VE-flexn5.png"
-        alt="artwork called VE-flexn"
-        {...sharedPictureProps}
+        title="VE-flexn 5"
       />
-      <Picture
+      <PictureWrapper
         src="/src/images/veniceSeries/VE-flexn9.png"
-        alt="artwork called VE-flexn"
-        {...sharedPictureProps}
+        title="VE-flexn 9"
       />
     </div>
     <div class="column">
-      <Picture
+      <PictureWrapper
         src="/src/images/veniceSeries/VE-flexn2.png"
-        alt="artwork called VE-flexn"
-        {...sharedPictureProps}
+        title="VE-flexn 2"
       />
-      <Picture
+      <PictureWrapper
         src="/src/images/veniceSeries/VE-flexn6.png"
-        alt="artwork called VE-flexn"
-        {...sharedPictureProps}
+        title="VE-flexn 6"
       />
-      <Picture
+      <PictureWrapper
         src="/src/images/veniceSeries/VE-flexn10.png"
-        alt="artwork called VE-flexn"
-        {...sharedPictureProps}
+        title="VE-flexn 10"
       />
     </div>
     <div class="column">
-      <Picture
+      <PictureWrapper
         src="/src/images/veniceSeries/VE-flexn3.png"
-        alt="artwork called VE-flexn"
-        {...sharedPictureProps}
+        title="VE-flexn 3"
       />
-      <Picture
+      <PictureWrapper
         src="/src/images/veniceSeries/VE-flexn7.png"
-        alt="artwork called VE-flexn"
-        {...sharedPictureProps}
+        title="VE-flexn 7"
       />
-      <Picture
+      <PictureWrapper
         src="/src/images/veniceSeries/VE-flexn11.png"
-        alt="artwork called VE-flexn"
-        {...sharedPictureProps}
+        title="VE-flexn 11"
       />
     </div>
     <div class="column">
-      <Picture
+      <PictureWrapper
         src="/src/images/veniceSeries/VE-flexn4.png"
-        alt="artwork called VE-flexn"
-        {...sharedPictureProps}
+        title="VE-flexn 4"
       />
-      <Picture
+      <PictureWrapper
         src="/src/images/veniceSeries/VE-flexn8.png"
-        alt="artwork called VE-flexn"
-        {...sharedPictureProps}
+        title="VE-flexn 8"
       />
     </div>
   </div>
